--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     <EditText
         android:id="@+id/url"
         android:inputType="textUri"
-        android:text="https://danfinlay.github.io/js-eth-personal-sign-examples/"
+        android:text="https://idex.market/unlock"
         android:layout_toStartOf="@+id/go"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
